cmake_minimum_required(VERSION 3.0.0)

add_custom_target(1_StartedTutorial)

add_subdirectory(1_1HelloWindow)
add_subdirectory(1_2Triangle)
add_subdirectory(1_3Rectangle)
add_subdirectory(1_3-1TriangleExercise)
add_subdirectory(1_3-2TriangleExercise)
add_subdirectory(1_3-3TriangleExercise)
add_subdirectory(1_4Shader)
add_subdirectory(1_4Shader-1)
add_subdirectory(1_4Shader-1Ex1)
add_subdirectory(1_5Textures)
add_subdirectory(1_5Textures-1)
add_subdirectory(1_5Textures-2)
add_subdirectory(1_5Textures-3)
add_subdirectory(1_5Textures-4)
add_subdirectory(1_6Transformations)
add_subdirectory(1_6Transformations-1)
add_subdirectory(1_6Transformations-2)
add_subdirectory(1_7CoorSystem)
add_subdirectory(1_7CoorSystem-1)
add_subdirectory(1_7CoorSystem-2)
add_subdirectory(1_7CoorSystem-3)
add_subdirectory(1_7CoorSystem-4)
add_subdirectory(1_8Camera)
add_subdirectory(1_8Camera-1)
add_subdirectory(1_8Camera-2)