cmake_minimum_required(VERSION 3.0.0)

add_custom_target(2_Lighting)

add_subdirectory(2_1Colors)
add_subdirectory(2_2BasicLighting)
add_subdirectory(2_2BasicLighting_ex1)
add_subdirectory(2_2BasicLighting_ex3)
add_subdirectory(2_2BasicLighting_ex4)
add_subdirectory(2_3Materials)
add_subdirectory(2_3Materials-1)
add_subdirectory(2_4LightingMaps)
add_subdirectory(2_4LightingMaps-1)
add_subdirectory(2_4LightingMaps-ex2)
add_subdirectory(2_4LightingMaps-ex3)
add_subdirectory(2_4LightingMaps-ex4)
add_subdirectory(2_5Light_casters)
add_subdirectory(2_5Light_casters-1)
add_subdirectory(2_5Light_casters-2)
add_subdirectory(2_5Light_casters-3)
add_subdirectory(2_6Multiple_lights)
add_subdirectory(2_6Multiple_lights-1)