cmake_minimum_required(VERSION 3.0.0)

add_custom_target(4_advancedOpengl)

add_subdirectory(4_1DepthTesting)
add_subdirectory(4_1DepthTesting-1)
add_subdirectory(4_2StencilTesting)
add_subdirectory(4_2StencilTesting-1)
add_subdirectory(4_2StencilTesting-2)
add_subdirectory(4_3BlendingDiscard)
add_subdirectory(4_3BlendingSort)
add_subdirectory(4_4faceCulling)
add_subdirectory(4_5framebuffers)
add_subdirectory(4_5framebuffers-1)
add_subdirectory(4_5framebuffers-2)