cmake_minimum_required(VERSION 3.0.0)

add_custom_target(4_advancedOpengl)

add_subdirectory(4_1DepthTesting)
add_subdirectory(4_1DepthTesting-1)
add_subdirectory(4_2StencilTesting)
add_subdirectory(4_2StencilTesting-1)
add_subdirectory(4_2StencilTesting-2)
add_subdirectory(4_3BlendingDiscard)
add_subdirectory(4_3BlendingSort)
add_subdirectory(4_3BlendingNoSort)
add_subdirectory(4_4faceCulling)
add_subdirectory(4_5framebuffers)
add_subdirectory(4_5framebuffers-1)
add_subdirectory(4_5framebuffers-2)
add_subdirectory(4_6CubemapsSkybox)
add_subdirectory(4_6CubemapsEnvironment_reflect)
add_subdirectory(4_6Cubemaps_Reflect_Refract)
add_subdirectory(4_6Cubemaps_Reflect_Refract_Maps)
add_subdirectory(4_8advanced_glsl_ubo)
add_subdirectory(4_9.geometry_shader_houses)
add_subdirectory(4_9geometry_shader_exploding)
add_subdirectory(4_9geometry_shader_exploding-1)
add_subdirectory(4_9.geometry_shader_normals)
add_subdirectory(4_10.1.instancing_quads)
add_subdirectory(4_10.2.asteroids)
add_subdirectory(4_10.3.asteroids_instanced)
add_subdirectory(4_10.4.windows_instanced)
add_subdirectory(4_11.1.anti_aliasing_msaa)
add_subdirectory(4_11.2.anti_aliasing_offscreen)