cmake_minimum_required(VERSION 3.0.0)

add_custom_target(5_advanced_lighting)

add_subdirectory(5_1.advanced_lighting)
add_subdirectory(5_2.gamma_correction)
add_subdirectory(5_3.1.1.shadow_mapping_depth)
add_subdirectory(5_3.1.2.shadow_mapping_base)
add_subdirectory(5_3.1.3.shadow_mapping)
add_subdirectory(5_3.2.1.point_shadows)
add_subdirectory(5_3.2.2.point_shadows_soft)
add_subdirectory(5_4.normal_mapping)
add_subdirectory(5_5.1.parallax_mapping)
add_subdirectory(5_5.2.steep_parallax_mapping)
add_subdirectory(5_5.3.parallax_occlusion_mapping)
add_subdirectory(5_6.hdr)