cmake_minimum_required(VERSION 3.0.0)

add_custom_target(5_advanced_lighting)

add_subdirectory(5_1.advanced_lighting)
add_subdirectory(5_2.gamma_correction)
add_subdirectory(5_3.1.1.shadow_mapping_depth)
add_subdirectory(5_3.1.2.shadow_mapping_base)
add_subdirectory(5_3.1.3.shadow_mapping)
add_subdirectory(5_3.2.1.point_shadows)
add_subdirectory(5_3.2.2.point_shadows_soft)
add_subdirectory(5_4.normal_mapping)
add_subdirectory(5_5.1.parallax_mapping)
add_subdirectory(5_5.2.steep_parallax_mapping)
add_subdirectory(5_5.3.parallax_occlusion_mapping)
add_subdirectory(5_6.hdr)
add_subdirectory(5_7.bloom)
add_subdirectory(5_7.bloomDebug)
add_subdirectory(5_8.1.deferred_shading)
add_subdirectory(5_8.2.deferred_shading_volumes)
add_subdirectory(5_8.3.deferred_shading_volumesReal)
add_subdirectory(5_8.4.sphere)
add_subdirectory(5_8.5.deferred_shading_volumesReal_instance)
add_subdirectory(5_9.ssao)
add_subdirectory(5_9.ssao-1)
add_subdirectory(5_9.ssao-2)