cmake_minimum_required(VERSION 3.0.0)

add_custom_target(7_in_practice)

add_subdirectory(7_1.debugging)
add_subdirectory(7_2.text_rendering)
add_subdirectory(7_2.text_rendering-1)
add_subdirectory(7_3.box2dDemo)
add_subdirectory(7_4.box2dGame)
add_subdirectory(7_5.2d_game)
add_subdirectory(7_6.portaudioDemo)
add_subdirectory(7_7.portaudioDemo)